# routes/profiles.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const profilesController = require('../controllers/profiles');
 
 router.get('/', profilesController.getAll);
-
-router.get('/update/:id', profilesController.updateContact);
-
+router.post('/', profilesController.create);
+router.put('/update/:id', profilesController.updateContact);
+router.delete('/delete/:email', profilesController.deleteUser);
 module.exports = router;
